Fixed #7992 - Scroll appearing shifts a survey

--- a/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/src/defaultV2-theme/defaultV2.fontless.scss
@@ -87,6 +87,7 @@ body {
   height: 100%;
   overflow: auto;
   position: relative;
+  scrollbar-gutter: stable both-edges;
 }
 
 .sd-root-modern--mobile {
@@ -107,6 +108,7 @@ body {
     overflow: auto;
     width: 100%;
     max-height: 100%;
+    scrollbar-gutter: stable both-edges;
   }
 }
 
